templates/sample-app/gitops/base/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: sample-app
  labels:
    app.kubernetes.io/name: sample-app
    app.kubernetes.io/part-of: cicd-demo
spec:
  to:
    kind: Service
    name: sample-app
  port:
    targetPort: http
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Redirect
